# aoc_rust

./: Cargo.toml
aoc_2019/: Cargo.toml
aoc_2019/src/: lib.rs
aoc_2019/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
aoc_2019/src/shared/: geometry.rs  intcode.rs
aoc_2025/: Cargo.toml
aoc_2025/src/: days.rs  lib.rs
aoc_2025/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs
aoc_core/: Cargo.toml
aoc_core/src/: aoc_day.rs  aoc_result.rs  lib.rs
src/: aoc_day.rs  aoc_result.rs  days.rs  lib.rs  main.rs  shared.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
src/shared/: geometry.rs  intcode.rs  math.rs
