[workspace]
resolver = "3"
members = ["aoc_2019"]

[package]
name = "aoc_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
aoc_core = { path = "./aoc_core" }
aoc_2019 = { path = "./aoc_2019" }
aoc_2025 = { path = "./aoc_2025" }